# aws-etl-end-to-end-airflow

aws-etl-end-to-end-airflow/: LICENSE  Makefile  README.md  pyproject.toml
aws-etl-end-to-end-airflow/aws-etl-airflow/: __init__.py  dataset.py  features.py  plots.py
aws-etl-end-to-end-airflow/aws-etl-airflow/modeling/: predict.py  train.py
aws-etl-end-to-end-airflow/docs/: mkdocs.yml
aws-etl-end-to-end-airflow/docs/docs/: index.md
