[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aws-etl-airflow"
version = "0.0.1"
description = "An end-to-end ETL project with AWS using Airflow in a  EC2 instance for data pipeline orchestration, S3 for storage and Amazon Redshipt for data warehouse"
authors = [
  { name = "musa Touray" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["aws-etl-airflow"]
force_sort_within_sections = true
